# E2IDEP

./: .gitignore  README.md
code/build_matrix/: cifar10.py  date_fruit.py  fetal_health.py  iofiles.py  mnist.py  radar.py  utils.py
code/lib_MIRAMns/: CMakeLists.txt
code/lib_MIRAMns/algorithms/: CMakeLists.txt  algorithms.cpp
code/lib_MIRAMns/data/dense/: test.mtx  testcov.mtx  testcov2.mtx
code/lib_MIRAMns/data/mtx_2c/: test.mtx  test_empty.mtx
code/lib_MIRAMns/data/mtx_3c/: test.mtx  test_empty.mtx
code/lib_MIRAMns/include/algorithms/: algorithms.hpp
code/lib_MIRAMns/include/iofiles/: iofiles.hpp
code/lib_MIRAMns/include/tools/: tools.hpp
code/lib_MIRAMns/include/utils/: utils.hpp
code/lib_MIRAMns/iofiles/: CMakeLists.txt  ioread.cpp  iowrite.cpp
code/lib_MIRAMns/proto/: CMakeLists.txt  protoData.proto
code/lib_MIRAMns/test/: CMakeLists.txt  buildCovariance.cpp  dis_iram.cpp  dis_miram.cpp  eigenvectors_save.cpp  mtx2c.cpp  mtx3c.cpp  mtx3c_dense.cpp  scalability_eigenvectors.cpp  scalability_speigenvectors.cpp  seq_iram.cpp  seq_miram.cpp  speigenvectors_save.cpp
code/lib_MIRAMns/tools/: CMakeLists.txt  tools.cpp
code/lib_MIRAMns/tools/python/: means.py
code/lib_MIRAMns/utils/: CMakeLists.txt  utils.cpp
data/: README.md  date_fruit_datasets.csv  requirements.txt
data/output/cifar10/: eigen_1.mtx  eigen_10.mtx  eigen_11.mtx  eigen_12.mtx  eigen_13.mtx  eigen_14.mtx  eigen_15.mtx  eigen_16.mtx  eigen_17.mtx  eigen_18.mtx  eigen_19.mtx  eigen_2.mtx  eigen_20.mtx  eigen_21.mtx  eigen_22.mtx  eigen_23.mtx  eigen_24.mtx  eigen_25.mtx  eigen_26.mtx  eigen_27.mtx  eigen_28.mtx  eigen_29.mtx  eigen_3.mtx  eigen_30.mtx  eigen_31.mtx  eigen_32.mtx  eigen_33.mtx  eigen_34.mtx  eigen_35.mtx  eigen_36.mtx  eigen_37.mtx  eigen_38.mtx  eigen_39.mtx  eigen_4.mtx  eigen_40.mtx  eigen_41.mtx  eigen_42.mtx  eigen_43.mtx  eigen_44.mtx  eigen_45.mtx  (+10 more)
data/output/date_fruit/: eigen_1.mtx  eigen_10.mtx  eigen_11.mtx  eigen_12.mtx  eigen_13.mtx  eigen_14.mtx  eigen_15.mtx  eigen_16.mtx  eigen_17.mtx  eigen_2.mtx  eigen_3.mtx  eigen_4.mtx  eigen_5.mtx  eigen_6.mtx  eigen_7.mtx  eigen_8.mtx  eigen_9.mtx
data/output/fetal_health/: eigen_1.mtx  eigen_10.mtx  eigen_2.mtx  eigen_3.mtx  eigen_4.mtx  eigen_5.mtx  eigen_6.mtx  eigen_7.mtx  eigen_8.mtx  eigen_9.mtx
data/output/mnist/: eigen_1.mtx  eigen_10.mtx  eigen_11.mtx  eigen_12.mtx  eigen_13.mtx  eigen_14.mtx  eigen_15.mtx  eigen_16.mtx  eigen_17.mtx  eigen_18.mtx  eigen_19.mtx  eigen_2.mtx  eigen_20.mtx  eigen_21.mtx  eigen_22.mtx  eigen_23.mtx  eigen_24.mtx  eigen_25.mtx  eigen_26.mtx  eigen_27.mtx  eigen_28.mtx  eigen_29.mtx  eigen_3.mtx  eigen_30.mtx  eigen_31.mtx  eigen_32.mtx  eigen_33.mtx  eigen_34.mtx  eigen_35.mtx  eigen_36.mtx  eigen_37.mtx  eigen_38.mtx  eigen_39.mtx  eigen_4.mtx  eigen_40.mtx  eigen_41.mtx  eigen_42.mtx  eigen_43.mtx  eigen_44.mtx  eigen_45.mtx  (+10 more)
data/output/radar/: eigen_1.mtx  eigen_10.mtx  eigen_11.mtx  eigen_12.mtx  eigen_13.mtx  eigen_14.mtx  eigen_15.mtx  eigen_16.mtx  eigen_17.mtx  eigen_18.mtx  eigen_19.mtx  eigen_2.mtx  eigen_20.mtx  eigen_21.mtx  eigen_22.mtx  eigen_23.mtx  eigen_24.mtx  eigen_25.mtx  eigen_26.mtx  eigen_27.mtx  eigen_28.mtx  eigen_29.mtx  eigen_3.mtx  eigen_30.mtx  eigen_31.mtx  eigen_32.mtx  eigen_33.mtx  eigen_34.mtx  eigen_35.mtx  eigen_36.mtx  eigen_37.mtx  eigen_38.mtx  eigen_39.mtx  eigen_4.mtx  eigen_40.mtx  eigen_41.mtx  eigen_42.mtx  eigen_43.mtx  eigen_44.mtx  eigen_45.mtx  (+10 more)
log/scalability/dense/: cifar10_1000_i.means  cifar10_1000_mi.means  cifar10_128_i.means  cifar10_128_mi.means  cifar10_16_i.means  cifar10_16_mi.means  cifar10_1_i.means  cifar10_1_mi.means  cifar10_256_i.means  cifar10_256_mi.means  cifar10_2_i.means  cifar10_2_mi.means  cifar10_32_i.means  cifar10_32_mi.means  cifar10_4_i.means  cifar10_4_mi.means  cifar10_512_i.means  cifar10_512_mi.means  cifar10_64_i.means  cifar10_64_mi.means  cifar10_8_i.means  cifar10_8_mi.means  mnist_1000_i.means  mnist_1000_mi.means  mnist_128_i.means  mnist_128_mi.means  mnist_16_i.means  mnist_16_mi.means  mnist_1_i.means  mnist_1_mi.means  mnist_256_i.means  mnist_256_mi.means  mnist_2_i.means  mnist_2_mi.means  mnist_32_i.means  mnist_32_mi.means  mnist_4_i.means  mnist_4_mi.means  mnist_512_i.means  mnist_512_mi.means  (+26 more)
log/scalability/sparse/: af23560_1000_i.means  af23560_1000_mi.means  af23560_128_i.means  af23560_128_mi.means  af23560_16_i.means  af23560_16_mi.means  af23560_1_i.means  af23560_1_mi.means  af23560_256_i.means  af23560_256_mi.means  af23560_2_i.means  af23560_2_mi.means  af23560_32_i.means  af23560_32_mi.means  af23560_4_i.means  af23560_4_mi.means  af23560_512_i.means  af23560_512_mi.means  af23560_64_i.means  af23560_64_mi.means  af23560_8_i.means  af23560_8_mi.means  bfw782a_1000_i.means  bfw782a_1000_mi.means  bfw782a_128_i.means  bfw782a_128_mi.means  bfw782a_16_i.means  bfw782a_16_mi.means  bfw782a_1_i.means  bfw782a_1_mi.means  bfw782a_256_i.means  bfw782a_256_mi.means  bfw782a_2_i.means  bfw782a_2_mi.means  bfw782a_32_i.means  bfw782a_32_mi.means  bfw782a_4_i.means  bfw782a_4_mi.means  bfw782a_512_i.means  bfw782a_512_mi.means  (+69 more)
models/mindspore/: MNIST.ipynb  MNIST.py  cifar10.ipynb  cifar10.py  date_fruit.ipynb  date_fruit.py  fetal_health.ipynb  fetal_health.py  radar.ipynb  radar.py
models/mindspore/figures/: cifar10_accuracy_full_pp.pgf  cond_training_time_cifar10_accuracy_full.pgf  cond_training_time_date_fruit_accuracy_full.pgf  cond_training_time_fetal_health_accuracy_full.pgf  cond_training_time_mnist_accuracy_full.pgf  date_fruit_accuracy_full_pp.pgf  fetal_health_accuracy_full_pp.pgf  mnist_accuracy_full_pp.pgf  mnist_accuracy_full_zoom_pp.pgf  training_time_cifar10_accuracy_full.pgf  (+3 more)
models/tensorflow/: MNIST.ipynb  cifar10.ipynb  date_fruit.ipynb  fetal_health.ipynb  radar.ipynb
scalability/: scalability_figures.ipynb
scalability/figures/: exe_spup.pgf  test_scalability.pgf  test_scalability_mi.pgf
scripts/: build_covariance.sh  build_matrix.sh  local_build_covariance.sh  make_MIRAMns_lib.sh
scripts/scalability/: compute_means.sh
(+88 files in other folders)
